--- a/Rag.ipynb
+++ b/Rag.ipynb
@@ -464,8 +464,8 @@
       "cell_type": "code",
       "source": [
         "%env OPENAI_API_VERSION=2024-02-15-preview\n",
-        "%env AZURE_OPENAI_API_KEY=<your-api-key> # uncomment and set your OpenAI API key\n",
-        "%env AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com"
+        "%env AZURE_OPENAI_API_KEY= # key here\n",
+        "%env AZURE_OPENAI_ENDPOINT= # Endpoint here"
       ],
       "metadata": {
         "id": "Og_HHCB0cZYO"
